<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="app_name">MEMbo</string>

    <string name="facebook_app_id">502742283189394</string>

	<string name="menu_settings">Settings</string>
	<string name="instant_optimize">OPTIMIZE</string>
	<string name="title_activity_settings">Settings</string>
	<string name="loading">Loading&#8230;</string>
	<string name="boost">Boost!</string>
	<string name="remove_from_whitelist">Remove from whitelist</string>
	<string name="add_to_whitelist">Whitelist app</string>
	<!-- Planned for future use -->
	<string name="switch_to">Switch to&#8230;</string>
	<string name="kill_app">Kill</string>
	<string name="app_info">App Info</string>
	<string name="app_killed">App Killed</string>
	<string name="app_whitelisted">App added to whitelist</string>
	<string name="app_whitelist_removed">App removed from whitelist</string>
	<string name="background_only_app">This is a background only app. It has no UI. 
	</string>
	<string name="cant_kill_whitelisted_app">Can\'t kill whitelisted app. Remove it from
		whitelist first. 
	</string>
	<string name="process_not_found">Process not found</string>
	<string name="no_running_processes">Can\'t get running processes. Try refreshing. 
	</string>
	<string name="close">Close</string>
	<!-- Remind to rate dialog follows -->
	<string name="remind_rate_dialog_title">Rate This App</string>
	<string name="remind_rate_dialog_content">Your support means a lot. It motivates us to
		release cool new features and updates.\n\nIf you enjoy this app,
		please rate it with 5 stars on Google Play. 
	</string>
	<string name="open_market">Open Google Play</string>
	<string name="already_rated">Already rated. Never show again.</string>
	<!-- Notification strings below -->
	<string name="notification_text">Touch to optimize memory</string>
	<string name="running_processes">Running Apps</string>
    <string name="disk_usage">Disk usage</string>
    <string name="battery_usage">Battery usage</string>
    <string name="sd_card">SD Card</string>
    <string name="internal_memory">Internal memory</string>
	<!-- Settings Activity -->
	<string name="notification_icon_title">Show in Notification Bar</string>
	<string name="notification_icon_summary">Keep RAMbo in the notification bar. You can tap it
		to quickly optimize your device.
	</string>
	<string name="vibrate_after_optimize_title">Vibration Notification</string>
	<string name="vibrate_after_optimize_summary">Vibrate after memory optimization</string>
	<!-- Added in version code 6 -->
	<string name="free">Free:</string>
	<string name="taken">Taken:</string>
	<string name="total">Total RAM:</string>
	<!-- Added in version code 7 -->
	<string name="update_app">Update App</string>
	<string name="feedback">Feedback</string>
	<string name="no_email_app">No email app found</string>
	<string name="tap_on_pie_for_running_processes">Tap on the pie to see all running processes 
	</string>
	<string name="memoryclearedamount">Memory saved: %dMB</string>
	<string name="aboutText">RAMbo Memory Management %s</string>
	<string name="aboutTextBody">RAMbo is a free software, provided "AS IS".\nIf you
		have any questions, don\'t hesitate to contact the author at
		feedback@hasmobi.com\n\n\u00A9 2013 hasMobi.com 
	</string>
	<string name="reload">Reload</string>
	<string name="memory_management">Memory Management</string>
	<string name="settings">Settings</string>
	<string name="about">About</string>
	<string name="quit">Quit</string>
	<!-- Added in version code 8 -->
	<string name="memory_optimized_toast">Memory optimized!\n%1$d apps closed.\n%2$d MB of
		RAM freed. 
	</string>
	<string name="no_apps_killed">Maximum memory optimization accomplished!</string>
	<string name="settings_title_general">General Settings</string>
	<string name="settings_title_advanced">Advanced Settings</string>
	<string name="settings_title_enable_autoboost">Screen on Auto Boost</string>
	<string name="settings_summary_enable_autoboost">Close background apps every time you turn on the
		screen so you can enjoy better performance immediately. 
	</string>
	<string name="toast_can_not_open_googleplay">Can not go to Google Play</string>
	<string name="app_whitelist">App Whitelist</string>
	<string name="active_apps_label">%d apps running</string>
	<string name="whitelisted_apps_label">%d apps whitelisted</string>
	<string name="n_apps_placeholder">%d apps running</string>
	<string name="main_actions_used_free_ram">"%1$d%% of memory available"</string>
	<string name="main_actions_sublabel_mbs">(%1$d out of %2$dMB)</string>
	<string name="main_actions_sublabel_systemapps">(%d of which are system)</string>
	<string name="total_ram_label">%dMB total</string>
	<string name="free_ram_label">%dMB free</string>
	<string name="free_ram_percent">%d%% free</string>
	<string name="last_optimized_toolbar">Last optimized: %s</string>
	<string name="never">never</string>
	<string name="available_percent_ram_label">%dMB free memory</string>
	<string name="manage_settings_label">Manage</string>
	<string name="users_n_mb_ram">Uses %s</string>
	<!-- Settings fragment -->
	<string name="enable">Enable</string>
	<string name="disable">Disable</string>
	<string name="sett_name_autoboost">Regular Autoboost</string>
	<string name="sett_name_notif_icon">Notification Icon</string>
	<string name="autoboost_enabled">Autoboost enabled</string>
	<string name="autoboost_disabled">Autoboost disabled</string>
	<string name="start_on_boot">Start on device boot</string>
	<string name="start_on_boot_summary">Autostart the app when you turn on or restart your
		device. 
	</string>
	<!-- Notification icon -->
	<string name="memory_usage">Memory usage</string>
	<!-- Changelog -->
	<string name="changelog_full_title">Change Log</string>
	<string name="changelog_title">What\'s New</string>
	<string name="changelog_ok_button">OK</string>
	<string name="changelog_show_full">more...</string>
	<!-- TOS -->
	<string name="tos_dialog_title">Terms of Use</string>
	<string name="tos_accept_button">I accept</string>
	<string name="analytics_tos_agree">I agree to provide anonymous usage statistics</string>
    <string name="details">Details</string>
    <!-- Battery usage fragment -->
    <string name="reduce_to_15_seconds">Reduce to 15 seconds</string>

    <string name="whitelisted">Whitelisted</string>
    <string name="optimize">Optimize</string>
    <string name="save_battery">Save battery</string>
    <string name="breakdown">Breakdown</string>

    <string name="remind_rate_message">Are you enjoying MEMbo?\n\nIf yes, please leave a 5 star rating on Google Play so others can find out about it as well. Thanks!</string>

    <string name="title_activity_splash">SplashActivity</string>
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="active_apps">Active apps</string>
    <string name="used_ram">Used RAM</string>
    <string name="free_ram">Available RAM</string>
</resources>