<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <PreferenceCategory android:title="@string/settings_title_general" >
        <CheckBoxPreference
            android:defaultValue="false"
            android:key="enable_autoboost"
            android:summary="@string/settings_summary_enable_autoboost"
            android:title="@string/settings_title_enable_autoboost" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="notification_icon"
            android:summary="@string/notification_icon_summary"
            android:title="@string/notification_icon_title" />
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="vibrate_after_optimize"
            android:summary="@string/vibrate_after_optimize_summary"
            android:title="@string/vibrate_after_optimize_title" />
    </PreferenceCategory>

</PreferenceScreen>